# Proyecto-Peritas-Teto

./: Makefile  README.md  docker-compose.yml  package-lock.json
backend/: Dockerfile  README.md  docker-compose.yaml  openapi.yaml  requirements.txt  setup.cfg
backend/.openapi-generator/: FILES
backend/alembic/: env.py
backend/alembic/versions/: 4dc2ea886eca_add_registros_table.py  84be38e0c8ca_fix_registros_table.py  9616937de794_add_registros_table.py  c4cd6c5d422a_add_registros_table.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/v1/: alerta.py  anuncios.py  auth.py  condominio.py  espacio_comun.py  (+9 more)
backend/app/core/: config.py  init_db.py  security.py
backend/app/impl/: auth_implementation.py
backend/app/models/: __init__.py  alerta.py  anuncio.py  condominio.py  espacio_comun.py  gasto_comun.py  multa.py  pago.py  registro.py  reserva.py  residente.py  usuario.py
backend/app/schemas/: anuncio.py  gasto_comun.py  reserva.py  usuario.py
backend/app/utils/: email_service.py
backend/scripts/: init_db.py  init_project.sh  seed_data.py  setup_script.sh  wait-for-db.sh
backend/src/app/: main.py
backend/tests/: conftest.py  test_anuncio.py  test_anuncios_api.py  test_autenticacin_api.py  test_autenticacion.py  test_condominio.py  test_condominios_api.py  test_espacio_comun.py  test_espacios_comunes_api.py  test_gasto_comun.py  test_gastos_comunes_api.py  test_multa.py  test_multas_api.py  test_pago.py  test_pagos_api.py  test_reserva.py  test_residentes.py  test_residentes_api.py  test_usuario.py  test_usuarios_api.py
(+241 files in other folders)
